New blog post Custom buffers in Golang

--- a/career/it-career-pitfalls-to-avoid/index.html
+++ b/career/it-career-pitfalls-to-avoid/index.html
@@ -45,7 +45,7 @@
 
 
 
-<link rel="canonical" href="/blog/career/it-career-pitfalls-to-avoid/">
+<link rel="canonical" href="https://www.elitmus.com/blog/career/it-career-pitfalls-to-avoid/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
