--- a/technology/how-we-host-our-blog-on-github-pages-and-yet-serve-it-from-our-own-sub-url/index.html
+++ b/technology/how-we-host-our-blog-on-github-pages-and-yet-serve-it-from-our-own-sub-url/index.html
@@ -45,7 +45,7 @@
 
 
 
-<link rel="canonical" href="/blog/technology/how-we-host-our-blog-on-github-pages-and-yet-serve-it-from-our-own-sub-url/">
+<link rel="canonical" href="https://www.elitmus.com/blog/technology/how-we-host-our-blog-on-github-pages-and-yet-serve-it-from-our-own-sub-url/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
