--- a/technology/using-monit-to-get-email-alert-on-unauthorized-login/index.html
+++ b/technology/using-monit-to-get-email-alert-on-unauthorized-login/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="/blog/technology/using-monit-to-get-email-alert-on-unauthorized-login/">
+<link rel="canonical" href="https://www.elitmus.com/blog/technology/using-monit-to-get-email-alert-on-unauthorized-login/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
