--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 
 
 
-<link rel="canonical" href="/blog/404.html">
+<link rel="canonical" href="https://www.elitmus.com/blog/404.html">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
