--- a/technology/beware-of-creating-ssh-folder-by-hand-when-selinux-is-turned-on/index.html
+++ b/technology/beware-of-creating-ssh-folder-by-hand-when-selinux-is-turned-on/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="/blog/technology/beware-of-creating-ssh-folder-by-hand-when-selinux-is-turned-on/">
+<link rel="canonical" href="https://www.elitmus.com/blog/technology/beware-of-creating-ssh-folder-by-hand-when-selinux-is-turned-on/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
