--- a/technology/gotchas-while-syntactically-translating-aes-encryption-logic-from-php-to-ruby/index.html
+++ b/technology/gotchas-while-syntactically-translating-aes-encryption-logic-from-php-to-ruby/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="/blog/technology/gotchas-while-syntactically-translating-aes-encryption-logic-from-php-to-ruby/">
+<link rel="canonical" href="https://www.elitmus.com/blog/technology/gotchas-while-syntactically-translating-aes-encryption-logic-from-php-to-ruby/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
