--- a/technology/importance-of-date-field-in-an-emails-header/index.html
+++ b/technology/importance-of-date-field-in-an-emails-header/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="/blog/technology/importance-of-date-field-in-an-emails-header/">
+<link rel="canonical" href="https://www.elitmus.com/blog/technology/importance-of-date-field-in-an-emails-header/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
