tldr for the post

--- a/categories.html
+++ b/categories.html
@@ -43,7 +43,7 @@
 
 
 
-<link rel="canonical" href="https://www.elitmus.com/blog/categories.html">
+<link rel="canonical" href="/blog/categories.html">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
