--- a/technology/making-airtel-3g-dongle-work-on-mac-os-10-dot-10-yosemite/index.html
+++ b/technology/making-airtel-3g-dongle-work-on-mac-os-10-dot-10-yosemite/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="https://www.elitmus.com/blog/technology/making-airtel-3g-dongle-work-on-mac-os-10-dot-10-yosemite/">
+<link rel="canonical" href="/blog/technology/making-airtel-3g-dongle-work-on-mac-os-10-dot-10-yosemite/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
