--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 
-<link rel="canonical" href="https://www.elitmus.com/blog/">
+<link rel="canonical" href="/blog/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
