--- a/technology/setting-up-amazon-rds-as-a-slave-to-a-self-managed-mysql-server/index.html
+++ b/technology/setting-up-amazon-rds-as-a-slave-to-a-self-managed-mysql-server/index.html
@@ -47,7 +47,7 @@
 
 
 
-<link rel="canonical" href="https://www.elitmus.com/blog/technology/setting-up-amazon-rds-as-a-slave-to-a-self-managed-mysql-server/">
+<link rel="canonical" href="/blog/technology/setting-up-amazon-rds-as-a-slave-to-a-self-managed-mysql-server/">
 <link href="/blog/feed.xml" type="application/atom+xml" rel="alternate" title="eLitmus Blog Feed">
 
 
